# CIMU

./: .CMakeLists.txt.swp  .gitignore  CMakeLists.txt  LICENSE
Data/: input.txt  minicode.txt  out.txt  outKalman.txt  output.txt
include/: angles.h  file_reader.h  file_writer.h
include/filters/: iir.h  kalman.h
src/: CMakeLists.txt  angles.c  file_reader.c  file_writer.c  main.c
src/filters/: iir.c  kalman.c
